provarAnt/00D190000000ZY2EAM/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Calculate_Price__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &apos;/apex/PriceOppProductLaunch?AccountId=&apos;+Opportunity.AccountId+&apos;&amp;ProductId=&apos;+Id,&apos;Price&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculate Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Sale_Price__c</fullName>
        <description>Sale Price Calculated by the Pricing Tool</description>
        <label>Sale Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Product_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Product Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_com_Counter__c</fullName>
        <label>Dealer.com Counter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_com_Product__c</fullName>
        <formula>IF( BEGINS(Product_Name__c , &apos;Dealer.com&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer.com Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Derived_Price__c</fullName>
        <label>Rate Card</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_Price_Change__c</fullName>
        <formula>IF(PricebookEntry.Product2.Disable_Price_Change__c ==TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Price Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount Percent entered in Salesforce-based Pricing Tool.</description>
        <label>Discount %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsPackageChild__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPackageChild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemID__c</fullName>
        <description>Used for reporting only</description>
        <formula>Id</formula>
        <inlineHelpText>Used for reporting only</inlineHelpText>
        <label>LineItemID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price_Grand_Total__c</fullName>
        <formula>Quantity *  ListPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget__c</fullName>
        <label>Monthly Advertising Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NBA_Amount__c</fullName>
        <label>NBA Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Forecast__c</fullName>
        <label>PS Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductIsParent__c</fullName>
        <formula>if(PricebookEntry.Product2.IsPackageParent__c, &quot;T&quot;, &quot;F&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductIsParent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Cost_Factor__c</fullName>
        <description>*** ADMIN ONLY ***
Cost Factor rolled over from the related Product</description>
        <formula>PricebookEntry.Product2.Cost_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Detail_Navigate__c</fullName>
        <formula>IF(
  AND(
    OR(
       PricebookEntry.Product2.ProductCode=&apos;P0212&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0211&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0226&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0213&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0225&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0224&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0131&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0130&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0133&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0132&apos;
       ),
    NOT(ISBLANK(Rate_Card_Detail__c))), 
  HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &apos;/&apos; +  Rate_Card_Detail__c, 
            &apos;Rate Card Detail&apos;, 
            &apos;_blank&apos;),
  &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Rate Card Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card Detail</label>
        <referenceTo>Rate_Card_Detail__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Details__c</fullName>
        <description>To Display all details calculated using the Pricing tool</description>
        <formula>&apos;Rate Card: &apos; &amp; 
 text( floor( Derived_Price__c ) ) + &quot;.&quot; + right( text( Derived_Price__c * 100 ), 2 ) &amp;
 BR() &amp; 
 &apos;Discount %: &apos; &amp; 
 text( floor( Discount__c ) ) + &quot;.&quot; + right( text( Discount__c * 100 ), 2 ) &amp;
 BR() &amp;
 &apos;Sale Price: &apos; &amp;  
 text( floor( Calculated_Sale_Price__c ) ) + &quot;.&quot; + right( text( Calculated_Sale_Price__c * 100 ), 2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Card Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StickyOpportunityID__c</fullName>
        <label>StickyOpportunityID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Product_Amount__c</fullName>
        <formula>(UnitPrice * Quantity)  * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Product Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Current_Product_Spend_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>The Current Product Spend field cannot be negative.  This validation rule prevents users from entering a value less than zero.</description>
        <errorConditionFormula>Current_Product_Spend__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Current_Product_Spend__c</errorDisplayField>
        <errorMessage>The Current Product Spend field cannot be less than zero.  Please enter zero or a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_BU_is_not_the_same_as_Opp_BU</fullName>
        <active>false</active>
        <description>Checks to see if the BU Type on the Opportunity and the Product BU on the Product match.</description>
        <errorConditionFormula>TEXT(Product2.Product_BU__c) &lt;&gt; TEXT(Opportunity.BU__c)</errorConditionFormula>
        <errorMessage>You have a selected a product that is different from the Business Unit you have selected on the Opportunity. Please go back to the Opportunity and either change the BU Type, or select the appropriate Price Book.</errorMessage>
    </validationRules>
</CustomObject>